--- a/src/app/presentation/shared/navbar/navbar.component.html
+++ b/src/app/presentation/shared/navbar/navbar.component.html
@@ -49,7 +49,7 @@
       <ul class="navbar-nav"  >
         <div class="navbar-cart" (click)="carrito()">
           <div class="navbar-cart-items" >
-            <p>{{ cursosCarrito?.length}}</p>
+            <p>{{ cursosCarrito.length}}</p>
             <i class="fa-solid fa-cart-shopping"></i>
           </div>
         </div>
