ajustando imagen al carusel

--- a/src/app/presentation/shared/footer/footer.component.html
+++ b/src/app/presentation/shared/footer/footer.component.html
@@ -3,21 +3,14 @@
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
             <div class="row">
+
                 <div class="col-xl-4 col-md-4 mb-30">
                     <div class="single-cta">
-                        <i class="fas fa-map-marker-alt"></i>
+                        
                         <div class="cta-text">
-                            <h4>Ubicación</h4>
-                            <span>Uruguay ,Paysandú </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-4 mb-30">
-                    <div class="single-cta">
-                        <i class="fas fa-phone"></i>
-                        <div class="cta-text">
-                            <h4>Telefono </h4>
-                            <a href="https://wa.link/fmfw8a">+598 97 035 194</a>
+                            <h4  href="https://wa.link/fmfw8a" type="submit">Whatsapp </h4>
+                            <a href="https://wa.link/fmfw8a"><i class="fab fa-whatsapp"></i></a>
+                           
                         </div>
                     </div>
                 </div>
