imagnes nuevas en el carrusel

--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="margin-top: 65px;">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="margin-top: 65px; width: 100%;">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -7,21 +7,21 @@
   <div class="carousel-inner" style="height: 100%;">
 
     <div class="carousel-item active" style="height: 100%;">
-      <img src="https://sutilweb.com/wp-content/uploads/2021/08/Lenguajes-de-programacion.jpg" alt="imagen de servicios" style="object-fit: cover; width: 100%; height: 100%;" />
+      <img src="../../../../assets/images/10dedescuento.jpg" alt="imagen de servicios" style="object-fit: cover; width: 100%; height: 100%;" />
       <div class="container">
         <div class="carousel-caption text-start"></div>
       </div>
     </div>
 
     <div class="carousel-item" style="height: 100%;">
-      <img src="https://elmanifiesto.com/images/carpeta_relacionados/2023/04/04/7156_rae.jpg" alt="imagen de servicios" style="object-fit: cover; width: 100%; height: 100%;" />
+      <img src="../../../../assets/images/Imagen de WhatsApp 2023-06-28 a las 20.18.22.jpg" alt="imagen de servicios" style="object-fit: cover; width: 100%; height: 100%;" />
       <div class="container">
         <div class="carousel-caption"></div>
       </div>
     </div>
 
     <div class="carousel-item" style="height: 100%;">
-      <img src="https://preparadoroposicionesmatematicas.com/wp-content/uploads/2022/04/academia-oposiciones-matematicas-secundaria.jpeg.webp" alt="imagen de servicios" style="object-fit: cover; width: 100%; height: 100%;" />
+      <img src="../../../../assets/images/aprendisaje-online.jpg" style="object-fit: cover; width: 100%; height: 100%;" />
       <div class="container">
         <div class="carousel-caption text-end"></div>
       </div>
