correccion citio - Sitio

--- a/src/app/presentation/shared/footer/footer.component.html
+++ b/src/app/presentation/shared/footer/footer.component.html
@@ -49,7 +49,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
                     <div class="footer-widget">
                         <div class="footer-widget-heading">
-                            <h3>Citios</h3>
+                            <h3>Sitios</h3>
                         </div>
                         <ul>
                             <li><a href="#">Inicio</a></li>
