--- a/src/app/presentation/carrito/carrito/carrito.component.html
+++ b/src/app/presentation/carrito/carrito/carrito.component.html
@@ -14,8 +14,11 @@
                             <h5 class="card-title">{{curso.titulo}}</h5>
                             
                         </div>
-                        <div class="productCart-total">
-                          <button class = "cart-btn-individual" (click)="pagarUnidad(curso.precio,curso.titulo!)">Pagar $ {{ curso.precio }}</button>
+                        <div class="productCart-total" *ngIf="!curso.detalle">
+                          <button class = "cart-btn-individual" (click)="pagarUnidad(curso.precio,curso.titulo!)">Pagar US$ {{ curso.precio }}</button>
+                        </div>
+                        <div class="productCart-total" *ngIf="curso.detalle">
+                          <button class = "cart-btn-individual" (click)="pagarUnidad(curso.precio,curso.titulo!)">Pagar US$ {{ curso.precio }} {{curso.detalle}}</button>
                         </div>
                 </div>
               </div>
@@ -26,5 +29,5 @@
    
     </div>
    
-    <button class="cart-btn" (click)="pagoTotal()">Pagar total  $ {{ totalPrecio }}</button>
+    <button class="cart-btn" (click)="pagoTotal()">Pagar total  US$ {{ totalPrecio }}</button>
   </div>
