--- a/src/app/presentation/course/get-curso/get-curso.component.html
+++ b/src/app/presentation/course/get-curso/get-curso.component.html
@@ -8,7 +8,7 @@
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">{{curso.titulo}}</h4>
-                      <h4 class="card-title">{{curso.precio}}</h4>
+                      <h4 class="card-title"> US${{curso.precio}} {{curso.detalle}}</h4>
                       <p class="card-text" [innerHTML]="curso.descripcion"></p>
                   </div>
               </div>
