se agrego la funcionalidad de eliminar la categoria

--- a/src/app/presentation/categoria/tabla/tabla-categoria.component.html
+++ b/src/app/presentation/categoria/tabla/tabla-categoria.component.html
@@ -23,7 +23,7 @@
                 Acciones
               </button>
               <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <li><a type="submit" class="dropdown-item">Eliminar</a></li>
+                <li><a type="submit" class="dropdown-item" (click)="eliminarCategoria(categoria.nombre)">Eliminar</a></li>
                 <li><a class="dropdown-item" >Editar</a></li>
                 <li><a class="dropdown-item" href="#">Inhabilitar</a></li>
               </ul>
