--- a/src/app/presentation/course/get-curso/get-curso.component.html
+++ b/src/app/presentation/course/get-curso/get-curso.component.html
@@ -27,7 +27,12 @@
                   <button class="subbt" style="margin: 5px;" (click)="carrito()">
                     Pagar Ahora
                   </button>
+                  <label class="form-label">Coordinar pago con el vendedor por Whatsapp <a style="margin:10px  " class="subbt"  href="https://wa.link/n0aiit" >Whatsapp <i class="fab fa-whatsapp"></i></a></label>
                   
+                  
+                  <div>
+    
+                  </div>
                 </div>
               
               </div>
