--- a/src/app/presentation/course/create-curso/create-curso.component.html
+++ b/src/app/presentation/course/create-curso/create-curso.component.html
@@ -54,7 +54,7 @@
             >
             <div class="form-group">
               <label class="form-label">titulo</label>
-              <angular-editor   formControlName="tituloPrograma" ></angular-editor>
+              <angular-editor   formControlName="tituloPrograma.controls[i]" ></angular-editor>
             </div>
             <!-- <app-form
             [control]="FormRegister.controls.tituloPrograma.controls[i]"
@@ -64,7 +64,7 @@
           ></app-form> -->
           <div class="form-group">
             <label class="form-label">Descripcion</label>
-            <angular-editor   formControlName="descripcionPrograma" ></angular-editor>
+            <angular-editor   formControlName="descripcionPrograma.controls[i]" ></angular-editor>
           </div>
 
           <!-- <app-form
