--- a/src/app/presentation/course/create-curso/create-curso.component.html
+++ b/src/app/presentation/course/create-curso/create-curso.component.html
@@ -46,34 +46,80 @@
         
 
         <span>Programa del Curso</span>
-        <div >
-          <div formArrayName="content">
-            <div
-              *ngFor="let content of tituloProgramaForms.controls; let i = index"
-              class="form-control"
-            >
-            <div class="form-group">
-              <label class="form-label">titulo</label>
-              <angular-editor   formControlName="tituloPrograma[i].value" ></angular-editor>
+        <div *ngFor="let funcion of tituloProgramaForms.controls; let f = index" class="form-control" >
+          <div formArrayName="tituloPrograma">
+            <div *ngFor="let control of tituloProgramaForms.controls; let i = index" class="form-control">
+              <div class="form-group">
+                <label class="form-label">Titulo</label>
+                <angular-editor formControlName="{{i}}"></angular-editor>
+              </div>
             </div>
-           
-          <div class="form-group">
-            <label class="form-label">Descripcion</label>
-            <angular-editor   formControlName="descripcionPrograma[i].value" ></angular-editor>
-          </div>
+            <div formArrayName="tituloPrograma">
+              <div *ngFor="let control of descripcionProgramaForms.controls; let i = index" class="form-control">
+                <div class="form-group">
+                  <label class="form-label">Descripcion</label>
+                  <angular-editor formControlName="{{i}}"></angular-editor>
+                </div>
+              </div>
+              
 
-          
-
-            <button type="button" (click)="removeContenidoPrograma(i)" class="btn btn-outline-danger">
+              <button
+              type="button"
+              (click)="removeContenidoPrograma(f)"
+              class="btn btn-outline-danger"
+            >
               Eliminar
             </button>
               
             </div>
             
-            <button type="button" (click)="addContenidoPrograma()"class="btn btn-outline-primary">
+            <button
+              type="button"
+              (click)="addContenidoPrograma()"
+              class="btn btn-outline-primary"
+            >
               añadir
             </button>
           </div>
+          <!-- <div formArrayName="content">
+            <div
+              *ngFor="let content of tituloProgramaForms.controls; let i = index"
+              class="form-control"
+            >
+
+            <app-form
+            [control]="FormRegister.controls.tituloPrograma.controls[i]"
+            type="text"
+            label="Titulo {{ i +1 }}"
+            placeHolder="Titulo {{ i+ 1}}"
+          ></app-form>
+
+
+          <app-form
+          [control]="FormRegister.controls.descripcionPrograma.controls[i]"
+          type="text"
+          label="Descripcion {{ i + 1}}"
+          placeHolder="Descripcion {{ i +1}}"
+        ></app-form>
+
+              <button
+              type="button"
+              (click)="removeContenidoPrograma(i)"
+              class="btn btn-outline-danger"
+            >
+              Eliminar
+            </button>
+              
+            </div>
+            
+            <button
+              type="button"
+              (click)="addContenidoPrograma()"
+              class="btn btn-outline-primary"
+            >
+              añadir
+            </button>
+          </div> -->
         </div>
 
         <div class="form-group" style="margin: 3px;">
@@ -98,17 +144,3 @@
     </div>
   </div>
 </div>
-
-<!-- <app-form
-          [control]="FormRegister.controls.descripcionPrograma.controls[i]"
-          type="text"
-          label="Descripcion {{ i + 1}}"
-          placeHolder="Descripcion {{ i +1}}"
-        ></app-form> -->
-
-         <!-- <app-form
-            [control]="FormRegister.controls.tituloPrograma.controls[i]"
-            type="text"
-            label="Titulo {{ i +1 }}"
-            placeHolder="Titulo {{ i+ 1}}"
-          ></app-form> -->
