--- a/src/app/presentation/course/create-curso/create-curso.component.html
+++ b/src/app/presentation/course/create-curso/create-curso.component.html
@@ -52,21 +52,29 @@
               *ngFor="let content of tituloProgramaForms.controls; let i = index"
               class="form-control"
             >
+            <div class="form-group">
+              <label class="form-label">Titulo</label>
+              <angular-editor   [formControl]="FormRegister.controls.tituloPrograma.controls[i]" ></angular-editor>
+            </div>
+            <div class="form-group">
+              <label class="form-label">Descripcion</label>
+              <angular-editor   [formControl]="FormRegister.controls.descripcionPrograma.controls[i]" ></angular-editor>
+            </div>
 
-            <app-form
+            <!-- <app-form
             [control]="FormRegister.controls.tituloPrograma.controls[i]"
             type="text"
             label="Titulo {{ i +1 }}"
             placeHolder="Titulo {{ i+ 1}}"
-          ></app-form>
+          ></app-form> -->
 
 
-          <app-form
+          <!-- <app-form
           [control]="FormRegister.controls.descripcionPrograma.controls[i]"
           type="text"
           label="Descripcion {{ i + 1}}"
           placeHolder="Descripcion {{ i +1}}"
-        ></app-form>
+        ></app-form> -->
 
               <button
               type="button"
