--- a/src/app/presentation/course/get-curso/get-curso.component.html
+++ b/src/app/presentation/course/get-curso/get-curso.component.html
@@ -43,13 +43,13 @@
               <div class="accordion" id="accordionPanelsStayOpenExample" *ngFor="let programa of curso.programa">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                      {{programa.tituloPrograma}}
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" [innerHTML]="programa.descripcionPrograma">
+                      <!-- {{programa.tituloPrograma}} -->
                     </button>
                   </h2>
                   <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                    <div class="accordion-body">
-                     {{programa.descripcionPrograma}}
+                    <div class="accordion-body" [innerHTML]="programa.descripcionPrograma">
+                     <!-- {{programa.descripcionPrograma}} -->
                     </div>
                   </div>
                 </div>
