--- a/src/app/presentation/course/get-curso/get-curso.component.html
+++ b/src/app/presentation/course/get-curso/get-curso.component.html
@@ -43,7 +43,7 @@
               <div class="accordion" id="accordionPanelsStayOpenExample" *ngFor="let programa of curso.programa">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" [innerHTML]="programa.descripcionPrograma">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" [innerHTML]="programa.tituloPrograma">
                       <!-- {{programa.tituloPrograma}} -->
                     </button>
                   </h2>
