link de referencias

--- a/src/app/presentation/usuario-referencia/clientes-usuario-referencias/usuario-referencia.component.html
+++ b/src/app/presentation/usuario-referencia/clientes-usuario-referencias/usuario-referencia.component.html
@@ -12,7 +12,7 @@
                   <h4>Expande el conocimiento</h4>
                   <h5>Link de invitacion</h5>
                   <div class="input-group mb-3">
-                      <input #textToCopy type="text" class="form-control" value="http://localhost:4200/usuario/invitacion/{{this.usuarioActual.usuarioId}}" disabled>
+                      <input #textToCopy type="text" class="form-control" value="https://corpdagda.com/usuario/invitacion/{{this.usuarioActual.usuarioId}}" disabled>
                       <button class="btn btn-outline-secondary" (click)="copyText(textToCopy.value)" type="button" id="copiador">
                         {{ copiado ? 'Copiado' : 'Copiar' }}
                       </button>
