--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -42,32 +42,7 @@
 
 
     <div class="container marketing">
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-6">
-          <img
-            src="https://ouch-cdn2.icons8.com/W_-2GVQvPdi_hEADF3Ta-TwVPwk82L0BzLBAh47fIMM/rs:fit:256:210/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMjE2/LzFjY2I0NTA5LTIx/ZjMtNDRmNS1iZTM1/LTY5ZGU1YmZjMDAw/MS5wbmc.png"
-            alt="imagen de servicios"
-          />
-          <h2 class="fw-normal">Cursos</h2>
-          <p>
-            Aqui encontrarar todos los cursos que oferecemos en nuestra
-            plataforma virtual Dagda
-          </p>
-          <p>
-            <a class="btn btn-primary" href="/curso/get-all"
-              >Ver mas &raquo;</a
-            >
-          </p>
-        </div>
-        <!-- /.col-lg-4 -->
-      </div>
-      <!-- /.row -->
-
-
-     
-
-      <!-- /END THE FEATURETTES -->
+      <app-get-all-curso></app-get-all-curso>
     </div>
     <!-- /.container -->
    
