titulo de academia dagda

--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -42,7 +42,7 @@
 
     <section id=timeline>
       <h1>QUÉ ES ACADEMIA DAGDA</h1>
-      <p class="leader">All cards must be the same height and width for space calculations on large screens.</p>
+      <p class="leader">Es una plataforma que quiere dar oportunidades unicas para el crecimiento exponencial de tu futuro.</p>
       <div class="demo-card-wrapper">
         <div class="demo-card demo-card--step1">
           <div class="head">
