se agrego un nuevo archivo de presentacion

--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -40,78 +40,7 @@
   ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <section id=timeline>
-      <h1>QUÉ ES ACADEMIA DAGDA</h1>
-      <p class="leader">Es una plataforma que quiere dar oportunidades unicas para el crecimiento exponencial de tu futuro.</p>
-      <div class="demo-card-wrapper">
-        <div class="demo-card demo-card--step1">
-          <div class="head">
-            <div class="number-box">
-              <span>01</span>
-            </div>
-            <h2><span class="small">Nuestra Proyeccion como academia <br></span>NUESTRA MISIÓN</h2>
-          </div>
-          <div class="body">
-            <p>Convertirnos en la mejor plataforma <br> on line de educación y promoción de oportunidades.</p>
-            <img src="../../../../assets/images/1628441.png" style="margin-left: 100px; width: 55%" alt="Graphic">
-          </div>
-        </div>
-    
-        <div class="demo-card demo-card--step2">
-          <div class="head">
-            <div class="number-box">
-              <span>02</span>
-            </div>
-            <h2><span class="small">Nuestra visión como adacemia</span> VISIÓN</h2>
-          </div>
-          <div class="body">
-            <p> Incentivar a cada persona a crecer, aprender y lograr sus metas.</p>
-            <img src="../../../../assets/images/testigo.png" style="margin-left: 100px; width: 55%" alt="Graphic">
-          </div>
-        </div>
-    
-        <div class="demo-card demo-card--step3">
-          <div class="head">
-            <div class="number-box">
-              <span>03</span>
-            </div>
-            <h2><span class="small">El valor que queremos dar como academia</span>VALOR</h2>
-          </div>
-          <div class="body">
-            <p> Ofrecer educación exclusiva por parte de profesionales en la temática, generar experiencias y oportunidades que cambien vidas.</p>
-            <img src="../../../../assets/images/value.png" style="margin-left: 100px; width: 55%" alt="Graphic">
-          </div>
-        </div>
-    
-        <div class="demo-card demo-card--step4">
-          <div class="head">
-            <div class="number-box">
-              <span>04</span>
-            </div>
-            <h2><span class="small">Educación</span>PLATAFORMA</h2>
-          </div>
-          <div class="body">
-            <p>Tenemos como misión ofrecer los mejores servicios educativos a la comunidad.</p>
-            <img src="../../../../assets/images/plataformaEducativa.png" style="margin-left: 100px; width: 55%" alt="Graphic">
-          </div>
-        </div>
-    
-        <div class="demo-card demo-card--step5">
-          <div class="head">
-            <div class="number-box">
-              <span>05</span>
-            </div>
-            <h2><span class="small">VALOR</span>Certificación</h2>
-          </div>
-          <div class="body">
-            <p>Se brinda los certificados de cada curso para que puedas expandir tus oportunidades</p>
-            <img src="../../../../assets/images/certificados.png" style="margin-left: 100px; width: 55%" alt="Graphic">
-          </div>
-        </div>
-        
-      </div>
-    </section>
-      
+   <app-presentacion></app-presentacion>
      
     
     <div class="container marketing">
