se agrego los sponsor

--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -46,5 +46,7 @@
     <div class="container marketing">
       <app-get-all-curso></app-get-all-curso>
     </div>
+
+    <app-sponsor></app-sponsor>
     <!-- /.container -->
    
