--- a/src/app/presentation/membresia copy/crear-membresia-usuario/create-membresia-usuario.component.html
+++ b/src/app/presentation/membresia copy/crear-membresia-usuario/create-membresia-usuario.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="asignar" (ngSubmit)="send()" [formGroup]="FormRegister">
+<form *ngIf="mostrarFormulario" (ngSubmit)="send()" [formGroup]="FormRegister">
     <div class="form-group">
       <app-form
         [control]="FormRegister.controls.email"
