--- a/src/app/presentation/home/presentacion/presentacion.component.html
+++ b/src/app/presentation/home/presentacion/presentacion.component.html
@@ -1,7 +1,11 @@
 
     <section id=timeline>
-      <h1>QUÉ ES ACADEMIA DAGDA</h1>
-      <p class="leader">Es una plataforma que quiere dar oportunidades unicas para el crecimiento exponencial de tu futuro.</p>
+      <h1 >BIENVENIDO A ACADEMIA DAGDA</h1>
+      <p class="leader">El aprendizaje es una aventura para toda la vida.
+        El sistema de ACADEMIA DAGDA está diseñado para liberar su máximo potencial en todas las áreas clave de su vida, incluida su mente, cuerpo y espíritu. Se trata de ser una estrella de rock en el trabajo y en la vida. Tener un cuerpo sano, joven y enérgico. Experimentar alegría, amor y satisfacción inquebrantables. Conectando profundamente con las personas y las comunidades que te rodean. Y aportando tus dones únicos a los demás.
+        Este no es el tipo de aprendizaje tradicional que le enseñaron en la escuela.
+        </p>
+        
       <div class="demo-card-wrapper">
         <div class="demo-card demo-card--step1">
           <div class="head">
