--- a/src/app/presentation/shared/footer/footer.component.html
+++ b/src/app/presentation/shared/footer/footer.component.html
@@ -81,11 +81,11 @@
             </div>
         </div>
     </div>
+    <app-sponsor></app-sponsor> 
    
     <div class="copyright-area" style="height: 5px;">
         
         <div class="container">
-            
             <div class="row">
                 
                 <div class="col-xl-6 col-lg-6 text-center text-lg-left">
