--- a/src/app/presentation/shared/sponsors/sponsor.component.html
+++ b/src/app/presentation/shared/sponsors/sponsor.component.html
@@ -1,11 +1,13 @@
-<div class="demo-row">
-  <div class="container" id="id-sponsors">
+
+
+<div class="demo-row" >
+  <div class="container" id="id-sponsors" > 
     <div class="text-center">
-    <h2 style="margin:20px 0;color:#fff;">Patrocinadores</h2>
+    <h2 style="margin:20px 0;color:#f3f3f3;">Patrocinadores</h2>
   </div>
-  <div id="sponsor-carousel" class="carousel slide" data-ride="carousel"> 
+  <div id="sponsor-carousel" class="carousel slide" data-ride="carousel" > 
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+    <ol class="carousel-indicators" >
       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-example-generic" data-slide-to="1"></li>
       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
@@ -30,23 +32,7 @@
           </div> -->
         </div>
       </div>
-      <!-- <div class="item">
-        <div class="row">
-          <div class="col-sm-3 col-xs-6">
-            <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo1.jpg" style="width: 160px;" /></div>
           </div>
-          <div class="col-sm-3 col-xs-6">
-            <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo2.jpg" style="width: 160px;" /></div>
-          </div>
-          <div class="col-sm-3 col-xs-6">
-            <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo3.jpg" style="width: 160px;" /></div>
-          </div>
-          <div class="col-sm-3 col-xs-6">
-            <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo4.jpg" style="width: 160px;" /></div>
-          </div>
-        </div>
-      </div> -->
-    </div>
   </div>
   </div>
   </div>
