--- a/src/app/presentation/shared/navbar/navbar.component.html
+++ b/src/app/presentation/shared/navbar/navbar.component.html
@@ -38,7 +38,7 @@
         <a class="nav-link" (click)="login()">iniciar sesion</a>
       </li>
       <li *ngIf="rol > 0 " class="nav-item">
-        <a  class="nav-link" routerLink="referencia/planilla">referencias</a>
+        <a  class="nav-link" (click)="referenciar()">referencias</a>
       </li>
       
      
