--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -36,6 +36,36 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!-- 
+Proyecto de Jairo para colaborar
+<head>
+  <title>Seleccionar palabra en una canción</title>
+  <style>
+    .cancion {
+      font-size: 18px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h1>Selecciona una palabra en la canción</h1>
+    <tr *ngFor="let palabra of cancionConPosiciones; let i  = index">
+    <td (click)="seleccionarAcorde(i)">{{palabra}} posicion {{i}}</td>
+    <td ><div *ngIf="eligirAcorde">
+      <div >
+        <label class="form-label">Categoria</label>
+            <select formControlName="categoria" class="form-control">
+              <option *ngFor="let opcion of acorde" [value]="opcion">{{ opcion }}</option>
+            </select>
+      </div>
+    </div></td>
+
+    
+    
+  </tr>
+</body> -->
+
+
     <!-- Marketing messaging and featurettes
   ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
