Guardar para actualizar Angular

--- a/src/app/presentation/home/home/home.component.html
+++ b/src/app/presentation/home/home/home.component.html
@@ -36,6 +36,11 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<app-calendario></app-calendario>
+
+
+
 <!-- 
 Proyecto de Jairo para colaborar
 <head>
