--- a/src/app/presentation/membresia/get-membresia/get-membresia.component.html
+++ b/src/app/presentation/membresia/get-membresia/get-membresia.component.html
@@ -21,7 +21,7 @@
             
           </div>
           <div class="subscription-content-wrapper">
-            academiadagda@gmail.com
+            academiadagda&#64;gmail.com
           </div>
          
       </div>
