--- a/src/app/presentation/shared/footer/footer.component.html
+++ b/src/app/presentation/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
                         <i class="far fa-envelope-open"></i>
                         <div class="cta-text">
                             <h4>Mail</h4>
-                            <span>academiadagda@gmail.com</span>
+                            <span>academiadagda&#64;gmail.com</span>
                         </div>
                     </div>
                 </div>
